starting on cocktail ui design

--- a/index.html
+++ b/index.html
@@ -1,16 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="/dist/css/style.css" />
+    <link href="https://fonts.googleapis.com/css?family=Nunito+Sans&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
+
 <body>
     <div class="container">
-        <div class="search">hello</div>
-    <div class="cocktailResults">hello</div>
+        <div class="searchNavbar">hello</div>
+
+        <div class="cocktailResults">
+            <form class="search">
+                <input type="text" class="search__field" placeholder="Search Cocktails">
+            </form>
+            <div class="cocktailMenu">
+                <div class="cocktailItem card">
+                    <img src="dist/images/drinkThumbnail.jpg">
+                    <div class="card-body">
+                        <h3 class="title">VODKA MARTINI</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                            labore et dolore magna aliqua. </p>
+                        <p class="recipeLink" href="">See Recipe</p>
+                    </div>
+                </div>
+                <div class="cocktailItem card">
+                    <img src="dist/images/drinkThumbnail.jpg">
+                    <div class="card-body">
+                        <h3 class="title">VODKA MARTINI</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                            labore et dolore magna aliqua. </p>
+                        <p class="recipeLink" href="">See Recipe</p>
+
+                    </div>
+                </div>
+                <div class="cocktailItem card">
+                    <img src="dist/images/drinkThumbnail.jpg">
+                    <div class="card-body">
+                        <h3 class="title">VODKA MARTINI</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                            labore et dolore magna aliqua. </p>
+                        <p class="recipeLink" href="">See Recipe</p>
+
+                    </div>
+                </div>
+                <div class="cocktailItem card">
+                    <img src="dist/images/drinkThumbnail.jpg">
+                    <div class="card-body">
+                        <h3 class="title">VODKA MARTINI</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                            labore et dolore magna aliqua. </p>
+                        <p class="recipeLink" href="">See Recipe</p>
+
+                    </div>
+                </div>
+                <div class="cocktailItem card">
+                    <img src="dist/images/drinkThumbnail.jpg">
+                    <div class="card-body">
+                        <h3 class="title">VODKA MARTINI</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                            labore et dolore magna aliqua. </p>
+                        <p class="recipeLink" href="">See Recipe</p>
+
+                    </div>
+                </div>
+                <div class="cocktailItem card">
+                    <img src="dist/images/drinkThumbnail.jpg">
+                    <div class="card-body">
+                        <h3 class="title">VODKA MARTINI</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                            labore et dolore magna aliqua. </p>
+                        <p class="recipeLink" href="">See Recipe</p>
+
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+
+    </div>
     </div>
 </body>
+
 </html>
